--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,16 +10,17 @@
           <div class="text-center text-white">
             <h1 class="sign-in">Sign In</h5>
           </div>
+          <p class="text-danger"><%= message %> </p>
           <form action="/login" method="POST">
-            <div class="mt-3 mb-5">
+            <div class="mt-3 mb-3">
               <label class="col-12 login-label" for="email">Email Address</label>
               <input class="col-12 login-input" type="text" name="email" id="email">
             </div>
-            <div class="my-5 mb-0">
+            <div class="my-4 mb-0">
               <label class="col-12 login-label" for="password">Password</label>
               <input class="col-12 login-input" type="password" name="password" id="password">
             </div>
-            <div class="my-4">
+            <div class="my-3">
               <a href="">Forgot Password</a>
             </div>
             <div class="d-flex justify-content-center m-4">
