--- a/views/partials/guest-navbar.ejs
+++ b/views/partials/guest-navbar.ejs
@@ -16,13 +16,12 @@
       </form>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active nav-item" aria-current="page" href="#">Sign In</a>
+          <a class="nav-link active nav-item" aria-current="page" href="/login">Sign In</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-item" href="#">Sign Up</a>
+          <a class="nav-link nav-item" href="/register">Sign Up</a>
         </li>
       </ul>
-
     </div>
   </div>
 </nav>
