--- a/public/style.css
+++ b/public/style.css
@@ -100,3 +100,7 @@ footer div div div p:first-child{
 #otp-card{
   display: none;
 }
+.a-tag{
+  text-decoration: underline;
+  cursor: pointer;
+}
