--- a/views/register.ejs
+++ b/views/register.ejs
@@ -57,14 +57,15 @@
             <h1 class="sign-in">Enter OTP</h5>
           </div>
           <p class="text-danger" id="error-text"></p>
+          <p class="text-success" id="success-text"></p>
           <p class="text-white text-center">OTP has been sent to your register phone number</p>
-          <form action="/login" method="POST">
+          <form>
             <div class="mt-3 mb-3">
               <label class="col-12 login-label" for="otp">OTP</label>
               <input class="col-12 login-input" type="text" name="otp" id="otp">
             </div>
             <div class="my-3">
-              <a href="">Didn't recieve otp? Send again</a>
+              <p class="a-tag" onclick="resendOtp()">Didn't recieve otp? Send again</p>
             </div>
             <div class="d-flex justify-content-center m-4">
               <button class="main-button" type="submit">Submit</button>
