--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('./partials/head') %> 
+<%- include('../partials/head') %> 
 <body class="pt-5">
-  <%- include('./partials/user-login-navbar') %> 
+  <%- include('../partials/admin/admin-login-navbar') %> 
   <div class="container h-100">
     <div class="row h-100 d-flex justify-content-center align-items-center">
       <div class="col-md-5">
-        <div class="login-card p-5">
+        <div class="admin-login-card p-5">
           <div class="text-center text-white">
             <h1 class="sign-in">Sign In</h5>
           </div>
           <p class="text-danger"><%= message %> </p>
-          <form action="/login" method="POST">
+          <form action="/admin/login" method="POST">
             <div class="mt-3 mb-3">
               <label class="col-12 login-label" for="email">Email Address</label>
               <input class="col-12 login-input" type="text" name="email" id="email">
@@ -25,9 +25,6 @@
             </div>
             <div class="d-flex justify-content-center m-4">
               <button class="main-button" type="submit">Sign In</button>
-            </div>
-            <div class="mt-4 mb-2 text-center pt-3">
-              <a href="/register">Don't have an account? Sign Up</a>
             </div>
           </form>
         </div>
