--- a/views/partials/admin/admin-navbar.ejs
+++ b/views/partials/admin/admin-navbar.ejs
@@ -11,7 +11,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <form class="d-flex mx-auto" role="search">
-        <input class="form-control" type="search" placeholder="Search" aria-label="Search">
+        <input class="form-control form-search" type="search" placeholder="Search" aria-label="Search">
         <button class="search-button" type="submit"><img class="search-icon" src="/assets/icons/search.png" alt=""></button>
       </form>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
