--- a/views/admin/admin-dashboard.ejs
+++ b/views/admin/admin-dashboard.ejs
@@ -1,8 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include('../partials/head') %> 
-<body>
+<body class="mt-5">
   <%- include('../partials/admin/admin-navbar') %> 
+  <section class="container pt-5">
+    <div class="row">
+      <div class="col-12">
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Title</th>
+              <th scope="col">Price</th>
+              <th scope="col">Category</th>
+              <th scope="col">Image</th>
+              <th scope="col">Action</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% if(product.length>0){ %> 
+              <% var count = 1 %> 
+              <% product.forEach(item => { %> 
+                <% item.skus.forEach(sku => { %> 
+
+            <tr>
+              <th scope="row"><%= count++ %> </th>
+              <td><%= item.title %> </td>
+              <td><%= sku.price %> </td>
+              <td><%= item.categoryId %> </td>
+              <td><%= sku.images[0] %> </td>
+              <td><%=  %>  </td>
+            </tr>
+            <% }) %> 
+            <% }) %> 
+            <% } %> 
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <script src="/script/navbarScroll.js"></script> 
 </body>
