--- a/views/admin/new-sku.ejs
+++ b/views/admin/new-sku.ejs
@@ -4,19 +4,18 @@
 <body class="pt-5">
   <%- include('../partials/admin/admin-navbar') %> 
   <section class="container p-4">
-    <p class="text-danger"><%= message %> </p>
     <form class="row g-3" method="POST" enctype="multipart/form-data">
       <div class="col-md-6">
         <label for="title" class="form-label">Title</label>
-        <input type="title" class="form-control" name="title" id="title" value="<%= product.title %>">
+        <input type="title" class="form-control" name="title" id="title" value="<%= product.title %>" readonly>
       </div>
       <div class="col-md-6">
         <label for="warranty" class="form-label">Warranty</label>
-        <input type="text" class="form-control" name="warranty" id="warranty" value="<%= product.warranty %>">
+        <input type="text" class="form-control" name="warranty" id="warranty" value="<%= product.warranty %>" disabled>
       </div>
       <div class="col-md-4">
         <label for="category" class="form-label">Category</label>
-        <select id="category" name="category" class="form-select">
+        <select id="category" name="category" class="form-select" disabled>
           <!-- <option selected>Choose...</option> -->
           <% if(categories.length>0){ %> 
             <% categories.forEach(item => { %> 
@@ -62,10 +61,10 @@
       </div>
       <div class="row">
         <div class="col-3">
-          <button type="submit" class="btn btn-primary" formaction="/admin/products/new">Submit</button>
+          <button type="submit" class="btn btn-primary" formaction="/admin/products/new/skus/new">Submit</button>
         </div>
         <div class="col-3">
-          <button type="submit" class="btn btn-primary" formaction="/admin/products/new/skus">Add More Skus</button>
+          <a href="/admin/products/new/skus" class="btn btn-primary">Add more skus</a>
         </div>
         <div class="col-3">
           <a href="/admin" class="btn btn-outline-primary">Cancel</a>
