Product editing functionality added for products and its skus

--- a/views/admin/new-sku.ejs
+++ b/views/admin/new-sku.ejs
@@ -50,15 +50,15 @@
       </div>
       <div class="row">
         <div class="input-group mb-3 col-md-4">
-          <input type="file" class="form-control" id="image1" name="image">
+          <input type="file" class="form-control" id="image1" name="image1">
           <label class="input-group-text" for="image1">Upload</label>
         </div>
         <div class="input-group mb-3 col-md-4">
-          <input type="file" class="form-control" id="image2" name="image">
+          <input type="file" class="form-control" id="image2" name="image2">
           <label class="input-group-text" for="image2">Upload</label>
         </div>
         <div class="input-group mb-3 col-md-4">
-          <input type="file" class="form-control" id="image3" name="image">
+          <input type="file" class="form-control" id="image3" name="image3">
           <label class="input-group-text" for="image3">Upload</label>
         </div>
       </div>
