--- a/views/admin/admin-dashboard.ejs
+++ b/views/admin/admin-dashboard.ejs
@@ -31,7 +31,7 @@
                     <td class="text-center align-middle"><%= sku.price %> </td>
                     <td class="text-center align-middle"><%= item.categoryId %> </td>
                     <td class="text-center align-middle"><img class="image-table" src="/<%= sku.images[0] %> " alt=""></td>
-                    <td class="text-center align-middle"><a href="/admin/products/edit/<%= item._id %> " class="btn btn-primary">Edit</a></td>
+                    <td class="text-center align-middle"><a href="/admin/products/view/<%= item._id %> " class="btn btn-primary">View Details</a></td>
                     <td class="text-center align-middle"><a href="/admin/products/delete/<%= item._id %> " class="btn btn-danger">Delete</a></td>
                   </tr>
                 <% }) %> 
