--- a/views/admin/product-skus-edit.ejs
+++ b/views/admin/product-skus-edit.ejs
@@ -4,30 +4,8 @@
 <body class="pt-5">
   <%- include('../partials/admin/admin-navbar') %> 
   <section class="container p-4">
-    <p class="text-danger"><%= message %> </p>
-    <form class="row g-3" method="POST" enctype="multipart/form-data">
-      <div class="col-md-6">
-        <label for="title" class="form-label">Title</label>
-        <input type="title" class="form-control" name="title" id="title" value="<%= product.title %>">
-      </div>
-      <div class="col-md-6">
-        <label for="warranty" class="form-label">Warranty</label>
-        <input type="text" class="form-control" name="warranty" id="warranty" value="<%= product.warranty %>">
-      </div>
-      <div class="col-md-4">
-        <label for="category" class="form-label">Category</label>
-        <select id="category" name="category" class="form-select">
-          <!-- <option selected>Choose...</option> -->
-          <% if(categories.length>0){ %> 
-            <% categories.forEach(item => { %> 
-              <option><%= item.categoryName %> </option>
-            <% }) %> 
-          <% } %> 
-        </select>
-      </div>
-      <div class="col-md-12">
-        <h2>Skus</h2>
-      </div>
+    <p id="error" class="text-danger"></p>
+    <form class="row g-3" id="form" enctype="multipart/form-data">
       <div class="col-md-4">
         <label class="form-label" for="color">Color</label>
         <input type="text" name="color" id="color" class="form-control" value="<%= skus.color %>">
@@ -48,21 +26,32 @@
         <label class="form-label" for="dimension">Dimension</label>
         <textarea type="text" name="dimension" id="dimension" class="form-control"><%= skus.dimension%></textarea>
       </div>
+      <div class="row">
+        <div class="col-md-2">
+          <img class="w-100 p-md-2 p-sm-3 p-5" id="img1" src="/<%= skus.images[0] %> " alt="">
+        </div>
+        <div class="col-md-2">
+          <img class="w-100 p-md-2 p-sm-3 p-5" id="img2" src="/<%= skus.images[1] %> " alt="">
+        </div>
+        <div class="col-md-2">
+          <img class="w-100 p-md-2 p-sm-3 p-5" id="img3" src="/<%= skus.images[2] %> " alt="">
+        </div>
+      </div>
       <div class="input-group mb-3 col-md-4">
-        <input type="file" class="form-control" id="image1" name="image1">
+        <input type="file" class="form-control" id="image1" name="image1" data-id="img1" onchange="viewImage(event, this.id)">
         <label class="input-group-text" for="image1">Upload</label>
       </div>
       <div class="input-group mb-3 col-md-4">
-        <input type="file" class="form-control" id="image2" name="image2">
+        <input type="file" class="form-control" id="image2" data-id="img2" name="image2" onchange="viewImage(event, this.id)">
         <label class="input-group-text" for="image2">Upload</label>
       </div>
       <div class="input-group mb-3 col-md-4">
-        <input type="file" class="form-control" id="image3" name="image3">
+        <input type="file" class="form-control" id="image3" data-id="img3" name="image3" onchange="viewImage(event, this.id)">
         <label class="input-group-text" for="image3">Upload</label>
       </div>
       <div class="row">
         <div class="col-3">
-          <button type="submit" class="btn btn-primary" formaction="/admin/products/new">Submit</button>
+          <button id="update-button" class="btn btn-primary" data-url="<%= skus._id %> " onclick="updateSku(this.id)">Submit</button>
         </div>
         <div class="col-3">
           <button type="submit" class="btn btn-primary" formaction="/admin/products/new/skus">Add More Skus</button>
@@ -75,6 +64,7 @@
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <script src="/script/navbarScroll.js"></script> 
-  <script src="/script/addsku.js"></script>
+  <script src="/script/updateAndDeleteSku.js"></script>
+  <script src="/script/changeImage.js"></script>
 </body>
 </html>
