--- a/views/admin/product-details.ejs
+++ b/views/admin/product-details.ejs
@@ -22,8 +22,12 @@
             <a href="/admin/products/edit/<%= product.id %>" class="btn btn-primary w-100">Edit</a>
           </div>
           <div class="col-md-2 m-2">
-            <a href="/admin/products/edit/<%= product.id %>" class="btn btn-danger w-100">Delete</a>
+            <button id="delete-button" class="btn btn-danger w-100" onclick="deleteProduct(this.id)" data-url="<%= product.id %> ">Delete</button>
           </div>
+          <div class="col-md-2 m-2">
+            <a href="/admin/products/skus/add/<%= product.id %>" class="btn btn-outline-success w-100">Add Skus</a>
+          </div>
+          <p id="error" class="text-danger"></p>
         </div>
         <hr>
         <% let count = 0 %>
@@ -66,8 +70,9 @@
               <a href="/admin/products/edit/<%= product.id %>/<%= item.id %>" class="btn btn-primary w-100">Edit</a>
             </div>
             <div class="col-md-3 m-2">
-              <a href="/admin/products/edit/<%= product.id %><%= item.id %>" class="btn btn-danger w-100">Delete</a>
+              <button class="btn btn-danger w-100" id="delete-sku<%= count %> " data-url="<%= item.id %>" data-prodId =<%= product.id %>  onclick="deleteSku(this.id)">Delete</button>
             </div>
+            <p class="text-danger" id="error-sku"></p>
           </div>
         <% }) %> 
         <div class="m-2">
@@ -77,6 +82,7 @@
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
   <script src="/script/navbarScroll.js"></script> 
-  <script src="/script/addsku.js"></script>
+  <script src="/script/updateAndDelete.js"></script>
+  <script src="/script/updateAndDeleteSku.js"></script>
 </body>
 </html>
