--- a/views/partials/admin/admin-navbar.ejs
+++ b/views/partials/admin/admin-navbar.ejs
@@ -34,7 +34,7 @@
           <a class="nav-link active nav-item" aria-current="page" href="#">Banners</a>
         </li>
         <li class="nav-item ps-4">
-          <a class="nav-link nav-item d-flex align-items-center" href="/logout"><img class="navbar-icon" src="/assets/icons/logout.png" alt=""> <span>Logout</span></a>
+          <a class="nav-link nav-item d-flex align-items-center" href="/admin/logout"><img class="navbar-icon" src="/assets/icons/logout.png" alt=""> <span>Logout</span></a>
         </li>
       </ul>
     </div>
