--- a/views/partials/user-login-navbar.ejs
+++ b/views/partials/user-login-navbar.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-parent fixed-top">
   <div class="container-fluid">
     <div>
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="/">
         <img class="logo h-100" src="/assets/logo/kroma-logo.png" alt="Bootstrap" width="30" height="24">
       </a>
       <a class="navbar-brand" href="/">KROMA</a>
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link nav-item" href="#">Back To Home</a>
+          <a class="nav-link nav-item" href="/">Back To Home</a>
         </li>
       </ul>
 
