--- a/views/partials/admin/admin-navbar.ejs
+++ b/views/partials/admin/admin-navbar.ejs
@@ -16,6 +16,9 @@
       </form>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item ps-4">
+          <a class="nav-link active nav-item" aria-current="page" href="/admin/categories">Categories</a>
+        </li>
+        <li class="nav-item ps-4">
           <a class="nav-link active nav-item" aria-current="page" href="/admin">Products</a>
         </li>
         <li class="nav-item ps-4">
