--- a/views/partials/admin/admin-navbar.ejs
+++ b/views/partials/admin/admin-navbar.ejs
@@ -10,10 +10,10 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <form class="d-flex mx-auto" role="search">
+      <!-- <form class="d-flex mx-auto" role="search">
         <input class="form-control form-search" type="search" placeholder="Search" aria-label="Search">
         <button class="search-button" type="submit"><img class="search-icon" src="/assets/icons/search.png" alt=""></button>
-      </form>
+      </form> -->
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item ps-4">
           <a class="nav-link active nav-item" aria-current="page" href="/admin/categories">Categories</a>
