--- a/views/admin/product-edit.ejs
+++ b/views/admin/product-edit.ejs
@@ -21,7 +21,7 @@
           <!-- <option selected>Choose...</option> -->
           <% if(categories.length>0){ %> 
             <% categories.forEach(item => { %>               
-              <option value='<%= item._id %>' <%= item.categoryName == product.categoryId? "selected":"" %>  ><%= item.categoryName %> </option>
+              <option value='<%= item._id %>' <%= item._id == product.categoryId? "selected":"" %>  ><%= item.categoryName %> </option>
             <% }) %> 
           <% } %> 
         </select>
