--- a/views/admin/categories/categories.ejs
+++ b/views/admin/categories/categories.ejs
@@ -1,26 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<%- include('../../partials/admin/admin-head-datatable) %> 
-<body>
+<%- include('../../partials/admin/admin-head-datatable') %> 
+<body class="p-5">
  <%- include('../../partials/admin/admin-navbar') %>
- <div>
-  <table>
-    <thead>
-      <tr>
-        <th>#</th>
-        <th>Category</th>
-        <th>Product</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% list.forEach(item => { %>
-        <tr>
-          <td><%= item.categoryName %> </td>
-          <td><%= item.forEach(product => product.title) %> </td>
-        </tr>
-      <% }) %> 
-    </tbody>
-  </table>
- </div>  
+ <section class="container">
+  <div class="row pt-5">
+    <p id="error" class="text-danger"></p>
+    <div class="table-overflow">
+      <table class="table table-striped" id="datatable">
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>Category</th>
+            <th>Action</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% let count = 0 %> 
+          <% categories.forEach(item => { %>
+            <tr>
+              <td><%= ++count %> </td>
+              <td><%= item.categoryName %> </td>
+              <td><button class="btn btn-danger" id="<%= item._id %>" onclick="deleteCategory(this.id)">Delete</button></td>
+            </tr>
+          <% }) %> 
+        </tbody>
+      </table>
+     </div>
+     <div class="col-md-12 pt-3">
+      <form action="/admin/categories" method="POST">
+        <div class="row g-3 align-items-center">
+          <div class="col-auto">
+            <label for="add-category" class="col-form-label">Category Name: </label>
+          </div>
+          <div class="col-auto">
+            <input class="form-control" id="add-category" name="category" type="text">
+          </div>
+          <div class="col-auto">
+            <button type="submit" class="btn btn-outline-success">Add Categories</button>
+          </div>
+          <div class="form-text text-danger">
+            <%= message %> 
+          </div>
+        </div>
+      </form>
+     </div>
+  </div>
+ </section>  
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+ <%- include('../../partials/admin/datatable-footer') %> 
+ <script src="/script/navbarScroll.js"></script> 
+ <script src="/script/deleteCategory.js"></script>
 </body>
 </html>
