--- a/views/admin/product-details.ejs
+++ b/views/admin/product-details.ejs
@@ -23,7 +23,7 @@
         </div>
         <div class="col-12 my-4 order-md-3 order-2">
           <label for="category" class="form-label">Category:</label>
-          <h5><%= product.categoryId %> </h5>
+          <h5><%= product.categoryId.categoryName %> </h5>
         </div>
         <div class="col-12 order-md-4 order-3">
           <label for="warranty" class="form-label">Warranty:</label>
