--- a/public/style.css
+++ b/public/style.css
@@ -50,6 +50,20 @@ body{
   padding: 0.5rem 1.5rem;
   font-weight: 500;
 }
+.sub-button{
+  border: solid 2px black;
+  border-radius: 10em;
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  padding: 0.5rem 1.5rem;
+  font-weight: 500;
+  transition: background-color 0.3s, color 0.3s;
+}
+.sub-button:hover{
+  background-color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+}
+
 a{
   color: black;
   font-weight: var(--font-weight-subheading);
@@ -126,4 +140,41 @@ footer div div div p:first-child{
 }
 .block-button{
   min-width: 6rem;
+}
+.product-card-image{
+  max-height: 10rem;
+}
+
+.product-card{
+  height: 21rem;
+  /* max-width: 18rem; */
+}
+
+.product-card-title{
+  font-weight: var(--font-weight-subheading);
+}
+
+.product-title{
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.range-form{
+  padding: 0.25rem 0.25rem !important;
+}
+
+.product-display-card{
+  min-height: 21rem;
+}
+
+@media (max-width: 576px) {
+  .product-display-card{
+    min-height: 0;
+  }
+}
+
+.product-anchor{
+  text-decoration: none;
 }
