--- a/views/landing-page.ejs
+++ b/views/landing-page.ejs
@@ -6,9 +6,7 @@
 <header class="banner d-flex justify-content-center align-items-center">
   <h1 class="banner-text text-white">one stop shop for all your<br>phone essentials</h1>
 </header>
-<section>
-
-</section>
+<%- include('./partials/users/landing-body') %> 
 <%- include('./partials/footer') %> 
 </body>
 </html>
