--- a/views/partials/users/landing-body.ejs
+++ b/views/partials/users/landing-body.ejs
@@ -14,17 +14,19 @@
       <% if(item.products.length>0) {%>
         <% item.products.forEach((product, index) => { %>
           <div class="col-md-3">
-            <div class="card product-card d-flex flex-column p-4 m-4 justify-content-center">
-              <div class="d-flex justify-content-center pb-4">
-                <img class="product-card-image" src="/<%= product.skus[0].images[0] %> " alt="">
+            <a class="product-anchor" href="">
+              <div class="card product-card d-flex flex-column p-4 m-4 justify-content-center">
+                <div class="d-flex justify-content-center pb-4">
+                  <img class="product-card-image" src="/<%= product.skus[0].images[0] %> " alt="">
+                </div>
+                <div class="d-flex justify-content-center">
+                  <p class="text-center product-card-title"><%= product.title %></p>
+                </div>
+                <div class="d-flex justify-content-center">
+                  <p class="text-success">From ₹<%= product.skus[0].price %> </p>
+                </div>
               </div>
-              <div class="d-flex justify-content-center">
-                <p class="text-center product-card-title"><%= product.title %></p>
-              </div>
-              <div class="d-flex justify-content-center">
-                <p class="text-success">From ₹<%= product.skus[0].price %> </p>
-              </div>
-            </div>
+            </a>
           </div>
         <% }) %>  
       <% }else{ %>
