--- a/views/users/product-page.ejs
+++ b/views/users/product-page.ejs
@@ -5,6 +5,9 @@
 <%- include('../partials/user-navbar') %> 
 <section class="container">
   <div class="row">
+    <div class="col-12 pt-4">
+      <h3>All Products</h3>
+    </div>
     <div class="col-12 d-sm-none">
       <div class="col-12 pt-1 collapse" id="filters">
         <p>Price Filter</p>
@@ -34,6 +37,7 @@
       </div>
     </div>
     <div class="col-3 d-sm-flex d-none card mt-3">
+      <h4 class="pt-4">Filters</h4>
       <div class="col-12 pt-1">
         <p>Price Filter</p>
         <form action="/products/filter" method="POST" class="row">
@@ -69,7 +73,7 @@
                 </div>
                 <div class="col-sm-12 col-6">
                   <div class="m-2">
-                    <h4 class="product-title text-center"><%= product.title %> </h4>
+                    <h5 class="product-title text-center"><%= product.title %> </h5>
                     <p class="text-secondary"><%= sku.color %></p>
                     <p class="text-success">₹<%= sku.price %> </p>
                   </div>
