--- a/views/partials/users/landing-body.ejs
+++ b/views/partials/users/landing-body.ejs
@@ -7,14 +7,14 @@
             <p>Best of <%= item.categoryName %></p>
           </div>
           <div class="d-flex justify-content-center">
-            <button class="main-button">View All</button>
+            <a class="main-button text-decoration-none" href="/products">View All</a>
           </div> 
         </div>       
       </div>
       <% if(item.products.length>0) {%>
         <% item.products.forEach((product, index) => { %>
           <div class="col-md-3">
-            <a class="product-anchor" href="">
+            <a class="product-anchor" href="/products/details/<%= product._id %>/<%= product.skus[0]._id %>">
               <div class="card product-card d-flex flex-column p-4 m-4 justify-content-center">
                 <div class="d-flex justify-content-center pb-4">
                   <img class="product-card-image" src="/<%= product.skus[0].images[0] %> " alt="">
