--- a/views/users/product-details.ejs
+++ b/views/users/product-details.ejs
@@ -7,7 +7,11 @@
   <div class="row">
     <div class="col-md-6 position-relative">
       <div class="d-flex justify-content-center p-5">
-        <img id="main-image" class="product-main-image" src="/<%= sku.images[0] %> " alt="">
+        <div class="img-cont">
+          <img id="main-image" class="product-main-image" src="/<%= sku.images[0] %> " alt="">
+          <div class="lens"></div>
+          <div class="result"></div>
+        </div>
       </div>
       <div class="d-flex px-5 justify-content-center">
         <div class="col-2 d-flex justify-content-center mx-3">
@@ -85,5 +89,6 @@
   </div>
 </section>
 <%- include('../partials/footer') %> 
+<script src="/script/userScript.js"></script>
 </body>
 </html>
