--- a/public/style-variables.css
+++ b/public/style-variables.css
@@ -10,7 +10,8 @@
   --font-weight-heading: 700;
 
   --font-size-normal: 1rem;
-  --font-size-heading: 4rem;
-  --font-size-title: 3rem;
+  --font-size-cart-items: 1.25rem;
   --font-size-price: 2.5rem;
+  --font-size-title: 3rem;
+  --font-size-heading: 4rem;
 }
