--- a/views/partials/user-navbar.ejs
+++ b/views/partials/user-navbar.ejs
@@ -19,7 +19,7 @@
           <a class="nav-link active nav-item d-flex align-items-center" aria-current="page" href="#"><img class="navbar-icon" src="/assets/icons/wishlist.png" alt=""> <span>Wishlist</span></a>
         </li>
         <li class="nav-item ps-4">
-          <a class="nav-link nav-item d-flex align-items-center" href="#"><img class="navbar-icon" src="/assets/icons/cart.png" alt=""> <span>Cart</span></a>
+          <a class="nav-link nav-item d-flex align-items-center" href="/cart"><img class="navbar-icon" src="/assets/icons/cart.png" alt=""> <span>Cart</span></a>
         </li>
         <li class="nav-item ps-4">
           <a class="nav-link active nav-item d-flex align-items-center" aria-current="page" href="#"><img class="navbar-icon" src="/assets/icons/user.png" alt=""> <span>Hi user</span></a>
