--- a/views/partials/user-navbar.ejs
+++ b/views/partials/user-navbar.ejs
@@ -16,7 +16,7 @@
       </form>
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item ps-4">
-          <a class="nav-link active nav-item d-flex align-items-center" aria-current="page" href="#"><img class="navbar-icon" src="/assets/icons/wishlist.png" alt=""> <span>Wishlist</span></a>
+          <a class="nav-link active nav-item d-flex align-items-center" aria-current="page" href="/wishlist"><img class="navbar-icon" src="/assets/icons/wishlist.png" alt=""> <span>Wishlist</span></a>
         </li>
         <li class="nav-item ps-4">
           <a class="nav-link nav-item d-flex align-items-center" href="/cart"><img class="navbar-icon" src="/assets/icons/cart.png" alt=""> <span>Cart</span></a>
