--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -4,6 +4,7 @@
 <body class="pt-5">
 <%- include('../partials/user-navbar') %> 
 <section class="container min-vh-100 pt-5">
+  <p class="text-danger" id="error"></p>
  <div class="row d-flex">
   <div class="col-lg-7 order-lg-0 order-1 my-3">
     <% let count = 0 %> 
@@ -26,7 +27,7 @@
           <button class="add-button" data-id="<%= item.skus[0]._id %>" data-add="true" data-prodid="<%= item.productId._id %>" id="inc-button<%= count %>" onclick="changeQty(this.id, 1, '<%= count%>')">+</button>
         </div>
         <div class="d-flex justify-content-between">
-          <button class="sub-button">Move to wishlist</button>
+          <button class="sub-button" id="add-to-wishlist-button" onclick="moveToWishlist(this.id, '<%= item.productId._id %>', '<%= item.skus[0]._id %>')">Move to wishlist</button>
           <button class="sub-button" id="remove-button<%= count %>" onclick="removeProduct(this.id, '<%= item.productId._id %>', '<%= item.skus[0]._id %>')">Remove</button>
         </div>
       </div>
