--- a/views/users/cart.ejs
+++ b/views/users/cart.ejs
@@ -56,7 +56,7 @@
         <p id="total">₹<%= Math.round(cartTotal + cartTotal*0.18) %> </p>
       </div>
       <div class="d-flex justify-content-end mt-5">
-        <button class="main-button">Place Order</button>
+        <a class="main-button text-decoration-none" href="/checkout">Place Order</a>
       </div>
     </div>
   </div>
