--- a/views/partials/admin/admin-navbar.ejs
+++ b/views/partials/admin/admin-navbar.ejs
@@ -25,7 +25,7 @@
           <a class="nav-link nav-item" href="/admin/users">Users</a>
         </li>
         <li class="nav-item ps-4">
-          <a class="nav-link active nav-item" aria-current="page" href="#">Orders</a>
+          <a class="nav-link active nav-item" aria-current="page" href="/admin/orders">Orders</a>
         </li>
         <li class="nav-item ps-4">
           <a class="nav-link active nav-item" aria-current="page" href="#">Satistics</a>
@@ -34,7 +34,7 @@
           <a class="nav-link active nav-item" aria-current="page" href="#">Coupons</a>
         </li>
         <li class="nav-item ps-4">
-          <a class="nav-link active nav-item" aria-current="page" href="#">Banners</a>
+          <a class="nav-link active nav-item" aria-current="page" href="/admin/banner">Banners</a>
         </li>
         <li class="nav-item ps-4">
           <a class="nav-link nav-item d-flex align-items-center" href="/admin/logout"><img class="navbar-icon" src="/assets/icons/logout.png" alt=""> <span>Logout</span></a>
